# resnet-unet-imagesegmentation

./: .gitignore  README.md  main.py  pyproject.toml
data/: segmentation_dataset.py
engine/: eval.py  train.py
models/: resnet_unet.py
notebooks/: resnet50-unet-training.ipynb
utils/: common.py  metrics.py
